[gd_scene load_steps=11 format=2]

[ext_resource path="res://DungeonCrawler/UI/PageTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://DungeonCrawler/UI/Login/ForgetPassword.gd" type="Script" id=2]
[ext_resource path="res://Assets/ui/back_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/ui/back_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_6.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button_press.png" type="Texture" id=7]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button.png" type="Texture" id=8]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 6 )

[node name="ForgetPassword" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" parent="." index="3"]
text = "Reset password"

[node name="BackButton" parent="." index="4"]
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="SuccessNotification" type="AcceptDialog" parent="." index="5"]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -40.0
margin_right = 75.0
margin_bottom = 40.0
theme = SubResource( 2 )
window_title = "Email sent"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessDialog" type="Label" parent="SuccessNotification" index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -33.0
rect_scale = Vector2( 1.00149, 0.991785 )
custom_fonts/font = ExtResource( 6 )
text = "An email has been sent for you to reset the password!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetPasswordBox" type="VBoxContainer" parent="." index="6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -17.0
margin_right = 74.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 45 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="HBoxContainer" parent="ResetPasswordBox" index="0"]
margin_right = 184.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="ResetPasswordBox/Email" index="0"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 15 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Email:"
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="ResetPasswordBox/Email" index="1"]
margin_left = 64.0
margin_right = 184.0
margin_bottom = 18.0
rect_min_size = Vector2( 120, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )

[node name="ButtonContainer" type="HBoxContainer" parent="." index="7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 13.0
margin_right = 40.0
margin_bottom = 33.0
rect_min_size = Vector2( 80, 20 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="TextureButton" parent="ButtonContainer" index="0"]
margin_right = 80.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="ButtonContainer/SubmitButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 20 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.121569, 1 )
text = "Submit"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="confirmed" from="SuccessNotification" to="." method="_on_SuccessNotification_confirmed"]
[connection signal="pressed" from="ButtonContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
